--- a/style/screens/screen-settings.scss
+++ b/style/screens/screen-settings.scss
@@ -62,6 +62,13 @@
       align-self: flex-end;
     }
 
+    h5 {
+      margin: 0.6rem 0 0.3rem 0;
+      padding: 0;
+      font-size: 1rem;
+      font-weight: normal;
+    }
+
     a {
       color: var(--link-color);
       border-bottom: 1px solid;
@@ -112,6 +119,10 @@
       flex-direction: row;
       align-items: center;
       margin: 0.6em 0;
+    }
+
+    h5 + .option {
+      margin-top: 0.3em;
     }
 
     .option.label-before {
