--- a/style/screens/screen-game.scss
+++ b/style/screens/screen-game.scss
@@ -372,7 +372,12 @@ $score-font-size: min(4vw, 5vh);
     }
   }
 
-  svg {
+  .score-points svg {
+    display: inline-block;
+    height: 0.8em;
+  }
+
+  p.high-score svg {
     display: inline-block;
     vertical-align: -0.1em;
     height: 0.8em;
