Move about links to Settings, add review and share options.

--- a/style/screens/screen-settings.scss
+++ b/style/screens/screen-settings.scss
@@ -152,6 +152,10 @@
       margin-right: 0.5em;
     }
 
+    .option + h3 {
+      margin-top: 1.8em;
+    }
+
     p.version-line {
       margin-top: 2.4rem;
       color: var(--footer-version-color);
