Fix deprecation warning: Use percentages for color.mix CSS.

--- a/style/colors-dark.scss
+++ b/style/colors-dark.scss
@@ -39,17 +39,17 @@ body.dark-mode {
   --button-bg-color-on-main-bg: #{color.mix(
       $button-base-color,
       $main-bg-color,
-      12
+      12%
     )};
   --button-bg-pressed-color-on-main-bg: #{color.mix(
       $button-base-color,
       $main-bg-color,
-      24
+      24%
     )};
   --button-bg-hover-color-on-main-bg: #{color.mix(
       $button-base-color,
       $main-bg-color,
-      32
+      32%
     )};
 
   // large play button in the setup screen
