Apply tap-highlight-color on text links.

--- a/style/colors-dark.scss
+++ b/style/colors-dark.scss
@@ -74,6 +74,7 @@ body.dark-mode {
   // link color
   --link-color: hsl(240, 50%, 70%);
   --link-hover-color: hsl(240, 85%, 90%);
+  --link-tap-highlight-color: hsla(240, 50%, 70%, 20%);
 
   // SETUP SCREEN
 
