--- a/style/colors.scss
+++ b/style/colors.scss
@@ -82,6 +82,7 @@ $blue: hsl(214deg, 64%, 50%);
   // link color
   --link-color: hsl(240, 70%, 50%);
   --link-hover-color: hsl(240, 70%, 5%);
+  --link-tap-highlight-color: hsla(240, 70%, 50%, 10%);
 
   // SETUP SCREEN
 
