--- a/style/screens/screen-settings.scss
+++ b/style/screens/screen-settings.scss
@@ -73,6 +73,7 @@
       color: var(--link-color);
       border-bottom: 1px solid;
       text-decoration: none;
+      -webkit-tap-highlight-color: var(--link-tap-highlight-color);
     }
 
     a:active,
