--- a/style/components/grid-display.scss
+++ b/style/components/grid-display.scss
@@ -5,6 +5,9 @@
 .grid-display .grid svg {
   width: 100%;
   height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  overflow: hidden;
 }
 
 .grid-display-animated,
