--- a/style/components/screens.scss
+++ b/style/components/screens.scss
@@ -7,6 +7,8 @@
   overflow: hidden;
   height: 100%;
   width: 100%;
+  max-height: 100%;
+  max-width: 100%;
   box-sizing: border-box;
   box-shadow: var(--screen-box-shadow);
   background: var(--main-bg-color);
