Fix typo in CSS transition.

--- a/style/components/atlas-picker.scss
+++ b/style/components/atlas-picker.scss
@@ -41,7 +41,8 @@
 
   transition:
     scale 0.1s,
-    translate 0.1s opacity 0.5s;
+    translate 0.1s,
+    opacity 0.5s;
 
   @media (hover) {
     &:hover {
